# handler/idp/idp.go
@@ -2,9 +2,9 @@ package idp
 
 import (
 	"github.com/morning-night-dream/oidc/cache"
-	"github.com/morning-night-dream/oidc/pkg/openapi"
+	"github.com/morning-night-dream/oidc/model"
 )
 
 type IdP struct {
-	UsernamePasswordCache *cache.Cache[openapi.UsernamePassword]
+	UserCache *cache.Cache[model.User]
 }
